[tool.poetry]
name = "jf-npc"
version = "0.1.0"
description = ""
authors = ["jfultr"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.6"
python-dotenv = "^1.0.0"
openai = "^1.11.1"
pymongo = "^4.6.1"
langchain = {extras = ["docarray"], version = "^0.1.7"}
langchain-openai = "^0.0.6"
pydantic = "1.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
