[tool.poetry]
name = "jf-npc"
version = "0.1.0"
description = ""
authors = ["jfultr"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.6"
python-dotenv = "^1.0.0"
openai = "^1.11.1"
pymongo = "^4.6.1"
langchain = {extras = ["docarray"], version = "^0.1.7"}
langchain-openai = "^0.0.6"
pydantic = "1.10.9"
langchain-community = "^0.0.20"
langchainhub = "^0.1.14"
chromadb = "^0.4.22"
bs4 = "^0.0.2"
docx2txt = "^0.8"
cohere = "^4.48"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
